--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="main.css">
     <title>Time App</title>
 </head>
 <body>
     <div class="time"></div>
-    <button class="show">Show</button>
+    <div class="overlay"></div>
+    <button class="show">
+        <span class="span">Show Time</span>
+    </button>
     <script src="main.js"></script>
 </body>
 </html>
